[package]
name = "blacklock"
version = "0.1.0"
edition = "2021"
authors = ["Toby Davis"]
description = "Post-quantum secure encryption using Ring Learning with Rounding (RLWR)"
license = "CC-BY-4.0"
repository = "https://github.com/SephDavis/BlackLock"
keywords = ["cryptography", "post-quantum", "rlwr", "encryption"]
categories = ["cryptography"]

[dependencies]
rand = "0.8"
sha3 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
